--- a/package.json
+++ b/package.json
@@ -3,12 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@material-ui/core": "^4.11.4",
+    "@mui/material": "^5.6.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "express": "^4.18.2",
+    "firebase": "^9.23.0",
+    "gif.js": "^0.2.0",
+    "gifuct-js": "^2.1.2",
+    "ionicons": "^7.1.2",
+    "jquery": "^3.7.0",
+    "openai": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
+    "react-horizontal-scrolling-menu": "^4.0.4",
+    "react-icons": "^4.9.0",
+    "react-paginate": "^8.2.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "tailwind": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.1"
   }
 }
