--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 react_APP_RAPID_API_KEY=12052c3475mshfd4754b056e6a27p1f60f2jsn39be4548d3df
-OPENAI_API_KEY='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'
+REACT_APP_OPENAI_API_KEY=Bearer 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
